--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=GENESIS;Database=AimsrDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False",
+    "AIMSRIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AIMSR;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
