--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=GENESIS;Database=AimsrDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False",
+        "AIMSRIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AIMSR;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "IdentityOptions": {
+        "SignIn": {
+            "RequireConfirmedEmail": false
+        }
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=GENESIS;Database=AimsrDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False",
-    "AIMSRIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AIMSR;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+
 }
